--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     background-color: #1d3557;
     padding: 40px;
     margin: 100px;
-    color: white;
+    color: black;
     width: auto;
     align-self: center;
     border-radius: 20px;
